--- a/views/index.pug
+++ b/views/index.pug
@@ -2,14 +2,14 @@ extends layout
 
 block content
 
-	if registrations.length
-		table
-			tr
-				th Name
-				th Email
-			each registration in registrations
-				tr
-					td= registration.name
-					td= registration.email
-	else
-		p No registrations yet :(
+  if registrations.length
+    table.listing-table.table-dark.table-striped
+      tr
+        th Name
+        th Email
+      each registration in registrations
+        tr
+          td= registration.name
+          td= registration.email
+  else
+    p No registrations yet :(
