--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,11 @@ doctype html
 html
 	head
 		title= `${title}`
+		link(rel='stylesheet', href='../node_modules/bootstrap/dist/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/css/styles.css')
 
 	body
-		h1 My Amazing App
+		div.container.listing-reg
+			h1 My Amazing App
 
-		block content
+			block content
