--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
 	head
 		title= `${title}`
-		link(rel='stylesheet', href='../node_modules/bootstrap/dist/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/styles.css')
 
 	body
