--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,44 @@
-extends layout
-
-block content
-
-  if registrations.length
-    table.listing-table.table-dark.table-striped
-      tr
-        th Name
-        th Email
-      each registration in registrations
-        tr
-          td= registration.name
-          td= registration.email
-  else
-    p No registrations yet :(
+doctype html
+html(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description', content='')
+    meta(name='author', content='')
+    //link(rel='icon', href='../../../../favicon.ico')
+    title Cover Template for Bootstrap
+    // Bootstrap core CSS
+    link(href='/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    // Custom styles for this template
+    link(href='/css/index.css', rel='stylesheet')
+  body.text-center
+    .cover-container.d-flex.h-100.p-3.mx-auto.flex-column
+      header.masthead.mb-auto
+        .inner
+          h3.masthead-brand Cover
+          nav.nav.nav-masthead.justify-content-center
+            a.nav-link.active(href='#') Home
+            a.nav-link(href='/login') Log In
+      main.inner.cover(role='main')
+        h1.cover-heading Sample Main Page.
+        p.lead
+          | We are using this sample from bootstrap to show the functionality of the back end. It works!!!
+        p.lead
+          a.btn.btn-lg.btn-secondary(href='#') Learn more
+      footer.mastfoot.mt-auto
+        .inner
+          p
+            | Cover template for 
+            a(href='https://getbootstrap.com/') Bootstrap
+            | , by 
+            a(href='https://twitter.com/mdo') @mdo
+            | .
+    //
+      Bootstrap core JavaScript
+      ==================================================
+    // Placed at the end of the document so the pages load faster
+    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+    script.
+      window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\\/script>')
+    script(src='../../../../assets/js/vendor/popper.min.js')
+    script(src='../../../../dist/js/bootstrap.min.js')
