--- a/views/index.pug
+++ b/views/index.pug
@@ -39,6 +39,6 @@ html(lang='en')
     // Placed at the end of the document so the pages load faster
     script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
     script.
-      window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\\/script>')
-    script(src='../../../../assets/js/vendor/popper.min.js')
-    script(src='../../../../dist/js/bootstrap.min.js')
+      window.jQuery || document.write('<script src="/jquery/dist/jquery-slim.min.js"><\\/script>')
+    script(src='/popper/dist/popper.min.js')
+    script(src='/bootstrap/dist/js/bootstrap.min.js')
