updated naming of site

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,14 +15,14 @@ html(lang='en')
     .cover-container.d-flex.h-100.p-3.mx-auto.flex-column
       header.masthead.mb-auto
         .inner
-          h3.masthead-brand Cover
+          h3.masthead-brand BlizzardKicker
           nav.nav.nav-masthead.justify-content-center
             a.nav-link.active(href='#') Home
             a.nav-link(href='/login') Log In
       main.inner.cover(role='main')
-        h1.cover-heading Sample Main Page.
+        h1.cover-heading BlizzardKicker.
         p.lead
-          | We are using this sample from bootstrap to show the functionality of the back end. It works!!!
+          | Welcome to BlizzardKicker
         p.lead
           a.btn.btn-lg.btn-secondary(href='#') Learn more
       footer.mastfoot.mt-auto
