new schemas and nav links to API update

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,6 +19,7 @@ html(lang='en')
           nav.nav.nav-masthead.justify-content-center
             a.nav-link.active(href='#') Home
             a.nav-link(href='/login') Log In
+            a.nav-link(href='/APIStatus') Update API Data
       main.inner.cover(role='main')
         h1.cover-heading BlizzardKicker.
         p.lead
@@ -28,9 +29,9 @@ html(lang='en')
       footer.mastfoot.mt-auto
         .inner
           p
-            | Cover template for 
+            | Cover template for
             a(href='https://getbootstrap.com/') Bootstrap
-            | , by 
+            | , by
             a(href='https://twitter.com/mdo') @mdo
             | .
     //
