update node_modules include XMLHttpRequest

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ html(lang='en')
           nav.nav.nav-masthead.justify-content-center
             a.nav-link.active(href='#') Home
             a.nav-link(href='/login') Log In
-            a.nav-link(href='/APIStatus') Update API Data
+            a.nav-link(href='/status_API.html') Update API Data
       main.inner.cover(role='main')
         h1.cover-heading BlizzardKicker.
         p.lead
