--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,19 @@
 doctype html
 html(lang='en')
   head
+    -data = data || {}
+
+      if errors
+        ul.my-errors
+          for error in errors
+            li= error.msg
+
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description', content='')
     meta(name='author', content='')
     //link(rel='icon', href='../../../../favicon.ico')
-    title Cover Template for Bootstrap
+    title BlizzardKicker
     // Bootstrap core CSS
     link(href='/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     // Custom styles for this template
@@ -18,8 +25,23 @@ html(lang='en')
           h3.masthead-brand BlizzardKicker
           nav.nav.nav-masthead.justify-content-center
             a.nav-link.active(href='#') Home
-            a.nav-link(href='/login') Log In
             a.nav-link(href='/status_API') Update API Data
+            a.nav-link(href='#', onclick='openForm()') Login
+            #myForm.form-popup
+              form.form-container(method="POST" class="form-signin")
+                img.mb-4(src='https://getbootstrap.com/assets/brand/bootstrap-solid.svg', alt='', width='72', height='72')
+                h1.h3.mb-3.font-weight-normal Please sign in
+                label.sr-only(for='inputEmail') Email address
+                input#inputEmail.form-control(name='email',type='email', placeholder='Email address', required='', autofocus='', value=data.email)
+                label.sr-only(for='inputPassword') Password
+                input#inputPassword.form-control(name='pass',type='password', placeholder='Password', required='', value=data.pass)
+                .checkbox.mb-3
+                  label
+                    input(type='checkbox', value='remember-me')
+                    |  Remember me
+                button.btn.btn-lg.btn-primary.btn-block(type='submit') Sign in
+                button.btn.btn-lg.btn-primary.cancel.btn-block(type='button', onclick='closeForm()') Close
+                p.mt-5.mb-3.text-muted © 2017-2018
       main.inner.cover(role='main')
         h1.cover-heading BlizzardKicker.
         p.lead
@@ -41,5 +63,11 @@ html(lang='en')
     script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
     script.
       window.jQuery || document.write('<script src="/jquery/dist/jquery-slim.min.js"><\\/script>')
+      function openForm() {
+        document.getElementById("myForm").style.display = "block";
+      }
+      function closeForm() {
+        document.getElementById("myForm").style.display = "none";
+      }
     script(src='/popper/dist/popper.min.js')
     script(src='/bootstrap/dist/js/bootstrap.min.js')
