added functionality to learn more button on home page

--- a/views/index.pug
+++ b/views/index.pug
@@ -47,7 +47,7 @@ html(lang='en')
         p.lead
           | Welcome to BlizzardKicker
         p.lead
-          a.btn.btn-lg.btn-secondary(href='#') Learn more
+          a.btn.btn-lg.btn-secondary(href='/learn_more') Learn More 
       footer.mastfoot.mt-auto
         .inner
           p
