--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -15,7 +15,7 @@ block head
   header
     .row.justify-content-center
       nav.navbar.navbar-expand-lg.navbar-dark
-        a.navbar-brand(href="#") Blizzardkicker
+        a.navbar-brand(href="/") Blizzardkicker
         //Makes the menu collapsable
         button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
           span.navbar-toggler-icon
@@ -27,6 +27,8 @@ block head
               a.nav-link(href="/status_API") Update API Data
             li.nav-item
               a.nav-link(href="/viewData") View Data
+            li.nav-item
+              a.nav-link(href="/viewSkiData") View Ski Data
 
   block content
 
@@ -44,5 +46,5 @@ script.
   function closeForm() {
   document.getElementById("myForm").style.display = "none";
   }
-script(src='/popper/dist/popper.min.js')
+script(src='/popper.js/dist/popper.js')
 script(src='/bootstrap/dist/js/bootstrap.min.js')
