--- a/views/viewSkiData.pug
+++ b/views/viewSkiData.pug
@@ -3,7 +3,7 @@ block append head
   link(href='/css/skiViewer.css', rel='stylesheet')
 
 block content
-  h1= cond.resort
+  h1=cond.resort
   table
     tr
       td
@@ -13,14 +13,36 @@ block content
       th Snowfall
     tr
       th Depth
-      td= cond.depths.upper.snow
-      td= cond.depths.middle.snow
-      td= cond.depths.lower.snow
+      td= cond.condition.upper.snow
+      td= cond.condition.middle.snow
+      td= cond.condition.lower.snow
       td= cond.snowfall.today
     tr
       th Condition
-      td= cond.depths.upper.condition
-      td= cond.depths.middle.condition
-      td= cond.depths.lower.condition
+      td= cond.condition.upper.condition
+      td= cond.condition.middle.condition
+      td= cond.condition.lower.condition
       td
+  h3 Snowfall
+  table
+    tr
+      th(colspan="2") Historical
+    tr
+      th Date
+      th Snowfall
+    each item in cond.snowfall.historical
+      tr
+        td=item[0]
+        td=item[1]
+    tr
+      th(colspan="2") Predicted
+    tr
+      th Date
+      th Snowfall
+    each item in cond.snowfall.predicted
+      tr
+        td=item[0]
+        td=item[1]
+
+
 
