--- a/views/viewData.pug
+++ b/views/viewData.pug
@@ -1,11 +1,16 @@
-if registrations.length
-	table
-		tr
-		th Email
-		th Password
-		each registration in registrations
-			tr
-				td= registration.email
-				td= registration.pass
-else
-	p No registrations yet :(
+extends ../layouts/layout
+
+block append head
+  link(href='/css/skiViewer.css', rel='stylesheet')
+block content
+  if registrations.length
+    table
+      tr
+      th Email
+      th Password
+      each registration in registrations
+        tr
+          td= registration.email
+          td= registration.pass
+  else
+    p No registrations yet :(
