--- a/views/index.pug
+++ b/views/index.pug
@@ -19,13 +19,13 @@ block content
           h5.modal-title#LoginTitle Login
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
-        form.form-container.form-signin(method='POST')    
-          .modal-body        
+        form.form-container.form-signin(method='POST')
+          .modal-body
               h1.h3.mb-3.font-weight-normal Please sign in
               label.sr-only(for='inputEmail') Email address
               input#inputEmail.form-control(name='email', type='email', placeholder='Email address', required='', autofocus='')
               label.sr-only(for='inputPassword') Password
-              input#inputPassword.form-control(name='pass', type='password', placeholder='Password', required='')
+              input#inputPassword.form-control(name='password', type='password', placeholder='Pick a good one!', required='')
               .checkbox.mb-3
                 label
                   input(type='checkbox', value='remember-me')
@@ -33,6 +33,3 @@ block content
           .modal-footer
             button.btn.btn-primary(type='submit') Sign in
             button.btn.btn-secondary(type="button" data-dismiss="modal") Close
-
-
-
