separated login and reguster html

--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -22,7 +22,7 @@ block head
         .collapse.navbar-collapse#navbarSupportedContent
           ul.navbar-nav.mr-auto
             li.nav-item
-              a.nav-link(href="#") Login
+              a.nav-link(href="/login") Login
             li.nav-item
               a.nav-link(href="/status_API") Update API Data
             li.nav-item
