--- a/views/index.pug
+++ b/views/index.pug
@@ -9,27 +9,27 @@ block content
       .row.justify-content-center
         p Welcome to Blizzard Kicker
       .row.justify-content-center
-        button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#loginModal") Login
+        button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#loginModal") Register Here
 
   //This is the login popup
   #loginModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLongTitle', aria-hidden='true')
     .modal-dialog(role='document')
       .modal-content
         .modal-header
-          h5.modal-title#LoginTitle Login
+          h5.modal-title#LoginTitle Regisration
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
         form.form-container.form-signin(method='POST')
           .modal-body
-              h1.h3.mb-3.font-weight-normal Please sign in
+              h1.h3.mb-3.font-weight-normal Your email will be your username
               label.sr-only(for='inputEmail') Email address
               input#inputEmail.form-control(name='email', type='email', placeholder='Email address', required='', autofocus='')
               label.sr-only(for='inputPassword') Password
-              input#inputPassword.form-control(name='password', type='password', placeholder='Pick a good one!', required='')
+              input#inputPassword.form-control(name='password', type='password', placeholder='Password', required='')
               .checkbox.mb-3
                 label
                   input(type='checkbox', value='remember-me')
                   |  Remember me
           .modal-footer
-            button.btn.btn-primary(type='submit') Sign in
+            button.btn.btn-primary(type='submit') Register
             button.btn.btn-secondary(type="button" data-dismiss="modal") Close
