--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -11,7 +11,7 @@ a:hover {
 
 /* Custom default button */
 .btn-secondary,
-.btn-secondary:hover,
+/*.btn-secondary:hover,*/
 .btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
@@ -19,10 +19,27 @@ a:hover {
   border: .05rem solid #fff;
 }
 
+.btn-secondary:hover{
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #ededed;
+  border: .05rem solid #fff;
+
+}
+
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:focus {
+  /*color: #333;*/
+  text-shadow: none; /* Prevent inheritance from `body` */
+  /*background-color: #fff;*/
+  border: .05rem solid #0069D9;
+}
 
 /*
  * Base structure
  */
+
 
 html,
 body {
@@ -42,11 +59,15 @@ body {
   font-size: 200%;
 }
 
+.main-content .btn{
+  margin:10px;
+  margin-top: 0px;
+}
 .navbar-brand{
   font-size: 150%;
 }
 
-#loginModal{
+#loginModal,#registerModal{
   color:black;
 }
 
