--- a/views/index.pug
+++ b/views/index.pug
@@ -9,16 +9,17 @@ block content
       .row.justify-content-center
         p Welcome to Blizzard Kicker
       .row.justify-content-center
-        button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#loginModal") Register Here
-      .row.justify-content-center
-        button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#registerModal") Login Here
+        button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#registerModal") Register 
+        button.btn.btn-lg.btn-primary(type="button" data-toggle="modal" data-target="#loginModal") Login
+      //  .row.justify-content-center
+          button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#registerModal") Login Here
 
   //This is the login popup
-  #loginModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLongTitle', aria-hidden='true')
+  #registerModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLongTitle', aria-hidden='true')
     .modal-dialog(role='document')
       .modal-content
         .modal-header
-          h5.modal-title#LoginTitle Regisration
+          h5.modal-title#RegisterTitle Registration
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
         form.form-container.form-signin(method='POST')
@@ -36,11 +37,11 @@ block content
             button.btn.btn-primary(type='submit') Register
             button.btn.btn-secondary(type="button" data-dismiss="modal") Close
             
-  #registerModal.modal.fade(tabindex='-2', role='dialog', aria-labelledby='exampleModalLongTitle', aria-hidden='true')
+  #loginModal.modal.fade(tabindex='-2', role='dialog', aria-labelledby='exampleModalLongTitle', aria-hidden='true')
     .modal-dialog(role='document')
       .modal-content
         .modal-header
-          h5.modal-title#RegisterTitle Login
+          h5.modal-title#LoginTitle Login
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
         form.form-container.form-signin(method='POST')
