Added script to highlight current page

--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -23,11 +23,11 @@ block head
           ul.navbar-nav.mr-auto
             //- li.nav-item
             //-   a.nav-link(href="/login") Login
-            li.nav-item
+            li.nav-item#status_API
               a.nav-link(href="/status_API") Update API Data
-            li.nav-item
+            li.nav-item#viewData
               a.nav-link(href="/viewData") View Data
-            li.nav-item
+            li.nav-item#viewSkiData
               a.nav-link(href="/viewSkiData") View Ski Data
 
   block content
