--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -10,11 +10,12 @@ block head
     // Bootstrap core CSS
     link(href='/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     // Custom styles for this template
+    link(href='/css/default.css', rel='stylesheet')
 
 .container-fluid
   header
     .row.justify-content-center
-      nav.navbar.navbar-expand-lg.navbar-dark
+      nav.navbar.navbar-expand-lg.navbar-light
         a.navbar-brand(href="/") Blizzardkicker
         //Makes the menu collapsable
         button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
@@ -29,6 +30,8 @@ block head
               a.nav-link(href="/viewData") View Data
             li.nav-item#viewSkiData
               a.nav-link(href="/viewSkiData") View Ski Data
+            li.nav-item#cave
+              a.nav-link(href="/cave") Cave
 
   block content
 
