--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,7 @@ block content
           h5.modal-title#RegisterTitle Registration
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
-        form.form-container.form-signin(method='POST')
+        form.form-container.form-signin(action='/register' method='POST')
           .modal-body
               h1.h3.mb-3.font-weight-normal Your email will be your username
               label.sr-only(for='inputEmail') Email address
@@ -44,13 +44,13 @@ block content
           h5.modal-title#LoginTitle Login
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
-        form.form-container.form-signin(method='POST')
+        form.form-container.form-signin(action='userLogin' method='POST')
           .modal-body
               h1.h3.mb-3.font-weight-normal Your registered email
               label.sr-only(for='inputEmail') Email address
-              input#inputEmail.form-control(name='existingEmail', type='email', placeholder='Email address', required='', autofocus='')
+              input#inputEmail.form-control(name='email', type='email', placeholder='Email address', required='', autofocus='')
               label.sr-only(for='inputPassword') Password
-              input#inputPassword.form-control(name='existingPassword', type='password', placeholder='Password', required='')
+              input#inputPassword.form-control(name='password', type='password', placeholder='Password', required='')
               .checkbox.mb-3
                 label
                   input(type='checkbox', value='remember-me')
