--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -24,14 +24,16 @@ block head
           ul.navbar-nav.mr-auto
             //- li.nav-item
             //-   a.nav-link(href="/login") Login
-            li.nav-item#status_API
-              a.nav-link(href="/status_API") Update API Data
+            li.nav-item#login
+              a.nav-link(href="/login") Login
+            li.nav-item#cave
+              a.nav-link(href="/cave") Cave
             li.nav-item#viewData
               a.nav-link(href="/viewData") View Data
             li.nav-item#viewSkiData
               a.nav-link(href="/viewSkiData") View Ski Data
-            li.nav-item#cave
-              a.nav-link(href="/cave") Cave
+            
+
 
   block content
 
