Creating sepearate register page

--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -26,6 +26,8 @@ block head
             //-   a.nav-link(href="/login") Login
             li.nav-item#login
               a.nav-link(href="/login") Login
+            li.nav-item#register
+              a.nav-link(href="/register") Register
             li.nav-item#cave
               a.nav-link(href="/cave") Cave
             li.nav-item#viewData
