--- a/views/index.pug
+++ b/views/index.pug
@@ -44,7 +44,7 @@ block content
           h5.modal-title#LoginTitle Login
           button.close(type="button" data-dismiss="modal" aria-label="Close")
             span(aria-hidden="true") &times;
-        form.form-container.form-signin(action='userLogin' method='POST')
+        form.form-container.form-signin(action='login' method='POST')
           .modal-body
               h1.h3.mb-3.font-weight-normal Your registered email
               label.sr-only(for='inputEmail') Email address
