--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,10 @@
 extends ../layouts/layout
 block append head
   link(href='/css/index.css', rel='stylesheet')
+
+block vars
+  - var currentPage = "register"
+
 block content
   //highlight the current page
 
