--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -43,7 +43,7 @@ block vars
 
   block content
 
-          
+        
 //
   Bootstrap core JavaScript
   ==================================================
@@ -59,3 +59,5 @@ script.
   }
 script(src='/popper.js/dist/popper.js')
 script(src='/bootstrap/dist/js/bootstrap.min.js')
+
+block scripts
