--- a/views/register.pug
+++ b/views/register.pug
@@ -7,7 +7,7 @@ block content
   //highlight current
   .row.justify-content-center.loginRow
     .col-md-5.align-self-center
-      form.form-container.form-signin(action='userLogin' method='POST')
+      form.form-container.form-signin(action='/register' method='POST')
         .form-body
           h1.mb-3.font-weight-normal Register
           label(for='inputEmail') Email address
@@ -22,12 +22,113 @@ block content
             type='text'
             placeholder='Username'
             required
-            autofocus='')
-
+            )
+          //- single lowercase, single uppercase, single digit, single symbol, at least 8 long
+          -var passPatern= '(?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!-\/:-@[-`~])\\S{8,}'
+          //p=passPatern
           label(for='inputPassword') Password
           input#inputPassword.form-control.mb-3(name='password'
             type='password'
             placeholder='Password'
-            required)
-          p#errorMessage= error
+            required
+            pattern= passPatern
+            )
+          #passValid.p-2
+            h3 Password must contain the following
+            p.invalid#letter
+              | at least one 
+              strong lowercase 
+              |letter
+            p.invalid#cap
+              | at least one 
+              strong capital 
+              |letter
+            p.invalid#symb
+              | at least one 
+              strong symbol
+            p.invalid#num
+              | at least one 
+              strong number
+            p.invalid#char
+              | at least one 
+              strong 8 characters
+          if error
+            .row.justify-content-center
+              p.m-1#errorMessage= error
+              a.btn.btn-danger.btn-sm.ml-1#error(href='/login') Log in?
           button.btn.btn-primary(type='submit') Register
+
+
+block scripts
+  script.
+    $(function(){
+      var myInput = $("#inputPassword")[0];
+      var letter = $("#letter")[0];
+      var capital = $("#cap")[0];
+      var number = $("#num")[0];
+      var length = $("#char")[0];
+      var symbol = $("#symb")[0];
+
+      // When the user clicks on the password field, show the message box
+      myInput.onfocus = function() {
+        document.getElementById("passValid").style.display = "block";
+      }
+
+      // When the user clicks outside of the password field, hide the message box
+      myInput.onblur = function() {
+        document.getElementById("passValid").style.display = "none";
+      }
+
+      // When the user starts to type something inside the password field
+      myInput.onkeyup = function() {
+        // Validate lowercase letters
+        var lowerCaseLetters = /[a-z]/g;
+        if(myInput.value.match(lowerCaseLetters)) {  
+          letter.classList.remove("invalid");
+          letter.classList.add("valid");
+        } else {
+          letter.classList.remove("valid");
+          letter.classList.add("invalid");
+        }
+        
+        // Validate capital letters
+        var upperCaseLetters = /[A-Z]/g;
+        if(myInput.value.match(upperCaseLetters)) {  
+          capital.classList.remove("invalid");
+          capital.classList.add("valid");
+        } else {
+          capital.classList.remove("valid");
+          capital.classList.add("invalid");
+        }
+
+        // Validate numbers
+        var numbers = /[0-9]/g;
+        if(myInput.value.match(numbers)) {  
+          number.classList.remove("invalid");
+          number.classList.add("valid");
+        } else {
+          number.classList.remove("valid");
+          number.classList.add("invalid");
+        }
+
+        // Validate numbers
+        var symbols = /[!" + '"' +"\#$%&'()*+,\-./:;<=>?@\[\\\]^_`{|}~]/g;
+        if(myInput.value.match(symbols)) {  
+          symbol.classList.remove("invalid");
+          symbol.classList.add("valid");
+        } else {
+          symbol.classList.remove("valid");
+          symbol.classList.add("invalid");
+        }
+        
+        // Validate length
+        if(myInput.value.length >= 8) {
+          length.classList.remove("invalid");
+          length.classList.add("valid");
+        } else {
+          length.classList.remove("valid");
+          length.classList.add("invalid");
+        }
+
+      }
+    });
