Validation and second password requirement

--- a/styles/css/register.css
+++ b/styles/css/register.css
@@ -36,9 +36,18 @@
 .invalid{
 	color:red;
 }
+.invalid:before{
+	color:red;
+	content: "✖";
+}
 .valid{
 	color:green;
 }
+
+.valid:before{
+	content: "✔";
+}
+
 #passValid p{
 	margin: 1px;
 }
