--- a/views/register.pug
+++ b/views/register.pug
@@ -25,14 +25,23 @@ block content
             )
           //- single lowercase, single uppercase, single digit, single symbol, at least 8 long
           -var passPatern= '(?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!-\/:-@[-`~])\\S{8,}'
-          //p=passPatern
+          
           label(for='inputPassword') Password
-          input#inputPassword.form-control.mb-3(name='password'
+          input#inputPassword.pass.form-control.mb-3(name='password'
             type='password'
             placeholder='Password'
             required
             pattern= passPatern
             )
+
+          label(for='confirmPass') Confirm Password
+          input#confirmPass.pass.form-control.mb-3(name='confirm'
+            type='password'
+            placeholder='Confirm Password'
+            required
+            title="Passwords do not match"
+            )
+          //password validation div. Only shown if password is active
           #passValid.p-2
             h3 Password must contain the following
             p.invalid#letter
@@ -52,83 +61,126 @@ block content
             p.invalid#char
               | at least one 
               strong 8 characters
-          if error
+            p.invalid#match
+              | passwords 
+              strong match
+          //- Based on error code passed change error message
+          -var error = ''
+          case errCode
+            when '0'
+              - error = "Sorry, the username " + username +" is already taken"
+            when '1'
+              - error = "Sorry, that email is already taken"
+            when '2'
+              - error = "Unknown Error"
+            default
+              - break
+          //- if there's an error, tell them
+          if errCode
             .row.justify-content-center
               p.m-1#errorMessage= error
               a.btn.btn-danger.btn-sm.ml-1#error(href='/login') Log in?
-          button.btn.btn-primary(type='submit') Register
+          button.btn.btn-primary#subButton(type='submit') Register
 
 
 block scripts
   script.
     $(function(){
-      var myInput = $("#inputPassword")[0];
-      var letter = $("#letter")[0];
-      var capital = $("#cap")[0];
-      var number = $("#num")[0];
-      var length = $("#char")[0];
-      var symbol = $("#symb")[0];
+      var passBoxes = $(".pass");
+      var mainPass = $("#inputPassword");
+      var letter = $("#letter");
+      var capital = $("#cap");
+      var number = $("#num");
+      var length = $("#char");
+      var symbol = $("#symb");
+      var match = $("#match");
 
+      //was a button clicked?
+      var clicked = false;
       // When the user clicks on the password field, show the message box
-      myInput.onfocus = function() {
-        document.getElementById("passValid").style.display = "block";
-      }
+      passBoxes.focus(function() {
+        $("#passValid").show();
+      });
 
+      //If the button was pressed set clicked to true
+      $(":button").mousedown(function(){
+          clicked = true;
+        });
+      
       // When the user clicks outside of the password field, hide the message box
-      myInput.onblur = function() {
-        document.getElementById("passValid").style.display = "none";
-      }
+      passBoxes.blur(function() {
+        //If a button is clicked don't close the page
+        if(clicked){
+          clicked= false;
+        }else{
+          $("#passValid").hide();
+          clicked=false;
+        }
+
+      });
 
       // When the user starts to type something inside the password field
-      myInput.onkeyup = function() {
+      passBoxes.keyup(function() {
+
+        //set pattern for the confirm password to the mainPassword
+        $("#confirmPass").attr("pattern", mainPass.val());
+
         // Validate lowercase letters
         var lowerCaseLetters = /[a-z]/g;
-        if(myInput.value.match(lowerCaseLetters)) {  
-          letter.classList.remove("invalid");
-          letter.classList.add("valid");
+        if(mainPass.val().match(lowerCaseLetters)) {  
+          letter.removeClass("invalid");
+          letter.addClass("valid");
         } else {
-          letter.classList.remove("valid");
-          letter.classList.add("invalid");
+          letter.removeClass("valid");
+          letter.addClass("invalid");
         }
         
         // Validate capital letters
         var upperCaseLetters = /[A-Z]/g;
-        if(myInput.value.match(upperCaseLetters)) {  
-          capital.classList.remove("invalid");
-          capital.classList.add("valid");
+        if(mainPass.val().match(upperCaseLetters)) {  
+          capital.removeClass("invalid");
+          capital.addClass("valid");
         } else {
-          capital.classList.remove("valid");
-          capital.classList.add("invalid");
+          capital.removeClass("valid");
+          capital.addClass("invalid");
         }
 
         // Validate numbers
         var numbers = /[0-9]/g;
-        if(myInput.value.match(numbers)) {  
-          number.classList.remove("invalid");
-          number.classList.add("valid");
+        if(mainPass.val().match(numbers)) {  
+          number.removeClass("invalid");
+          number.addClass("valid");
         } else {
-          number.classList.remove("valid");
-          number.classList.add("invalid");
+          number.removeClass("valid");
+          number.addClass("invalid");
         }
 
         // Validate numbers
         var symbols = /[!" + '"' +"\#$%&'()*+,\-./:;<=>?@\[\\\]^_`{|}~]/g;
-        if(myInput.value.match(symbols)) {  
-          symbol.classList.remove("invalid");
-          symbol.classList.add("valid");
+        if(mainPass.val().match(symbols)) {  
+          symbol.removeClass("invalid");
+          symbol.addClass("valid");
         } else {
-          symbol.classList.remove("valid");
-          symbol.classList.add("invalid");
+          symbol.removeClass("valid");
+          symbol.addClass("invalid");
+        }
+
+        //check if passwords are equal
+        if($("#confirmPass").val().match(mainPass.val())){
+          match.removeClass("invalid");
+          match.addClass("valid");
+        } else {
+          match.removeClass("valid");
+          match.addClass("invalid");
         }
         
         // Validate length
-        if(myInput.value.length >= 8) {
-          length.classList.remove("invalid");
-          length.classList.add("valid");
+        if(mainPass.val().length >= 8) {
+          length.removeClass("invalid");
+          length.addClass("valid");
         } else {
-          length.classList.remove("valid");
-          length.classList.add("invalid");
+          length.removeClass("valid");
+          length.addClass("invalid");
         }
-
-      }
+      });
     });
