--- a/views/index.pug
+++ b/views/index.pug
@@ -12,31 +12,9 @@ block content
       .row.justify-content-center
         p Welcome to Blizzard Kicker
       .row.justify-content-center
-        button.btn.btn-lg.btn-secondary(type="button" data-toggle="modal" data-target="#registerModal") Register 
+        a.btn.btn-lg.btn-secondary(href="/register") Register
         button.btn.btn-lg.btn-primary(type="button" data-toggle="modal" data-target="#loginModal") Login
 
-  //This is the registration popup
-  #registerModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='registrationModal', aria-hidden='true')
-    .modal-dialog(role='document')
-      .modal-content
-        .modal-header
-          h5.modal-title#RegisterTitle Registration
-          button.close(type="button" data-dismiss="modal" aria-label="Close")
-            span(aria-hidden="true") &times;
-        form.form-container.form-signin(action='/register' method='POST')
-          .modal-body
-              h1.h3.mb-3.font-weight-normal Your email will be your username
-              label.sr-only(for='inputEmail') Email address
-              input#inputEmail.form-control(name='email', type='email', placeholder='Email address', required='', autofocus='')
-              label.sr-only(for='inputPassword') Password
-              input#inputPassword.form-control(name='password', type='password', placeholder='Password', required='')
-              .checkbox.mb-3
-                label
-                  input(type='checkbox', value='remember-me')
-                  |  Remember me
-          .modal-footer
-            button.btn.btn-primary(type='submit') Register
-            button.btn.btn-secondary(type="button" data-dismiss="modal") Close
   //login popup        
   #loginModal.modal.fade(tabindex='-2', role='dialog', aria-labelledby='loginModal', aria-hidden='true')
     .modal-dialog(role='document')
@@ -47,7 +25,7 @@ block content
             span(aria-hidden="true") &times;
         form.form-container.form-signin(action='login' method='POST')
           .modal-body
-              h1.h3.mb-3.font-weight-normal Your registered email
+              h1.h3.mb-3.font-weight-normal Please Login
               label.sr-only(for='inputEmail') Email address
               input#inputEmail.form-control(name='email', type='email', placeholder='Email address', required='', autofocus='')
               label.sr-only(for='inputPassword') Password
