--- a/views/cave.pug
+++ b/views/cave.pug
@@ -23,16 +23,6 @@ block append head
     });
     });
     
-    
-  script.
-    $(&apos;#currentUser&apos;).text(req.session.userId)
-
-  script.
-    function logOut() {
-    req.session.destroy();
-    return res.redirect('/');
-    }
-
 block vars
   - var currentPage = "cave"
 
@@ -80,7 +70,8 @@ block content
       #centerPage
         #introContent
           | Welcome to BlizzardKicker! 
-          p#currentUser User
+          block content
+            p currentUser
           button(onclick='logOut()') Log Out
           br
           |       According to our calculations, you will receive maximum shred
