--- a/views/cave.pug
+++ b/views/cave.pug
@@ -50,15 +50,19 @@ block content
           li
             label(for='trafficRange') Drive Time
             br
-            input#trafficRange.custom-range(type='range', min='1', max='10', step='0.5')
+            input#trafficRange.custom-range(name='trafficRange', type='range', min='1', max='10', step='0.5')
           li
             label(for='snowConditionsRange') Snow Conditions
             br
-            input#snowConditionsRange.custom-range(type='range', min='1', max='10', step='0.5')
+            input#snowConditionsRange.custom-range(name='snowConditionsRange', type='range', min='1', max='10', step='0.5')
           li
             label(for='weatherRange') Weather
             br
-            input#weatherRange.custom-range(type='range', min='1', max='10', step='0.5')
+            input#weatherRange.custom-range(name='weatherRange', type='range', min='1', max='10', step='0.5')
+            li
+              label(for='snowfallRange') Desired Snowfall
+              br
+              input#weatherRange.custom-range(name='snowfallRange', type='range', min='1', max='10', step='0.5')
       // Page Content
       #content
         nav.navbar.navbar-expand-lg.navbar-light.bg-light
