--- a/views/login.pug
+++ b/views/login.pug
@@ -9,9 +9,9 @@ block content
       form.form-container.form-signin(action='login' method='POST')
         .form-body
           h1.mb-3.font-weight-normal Login
-          label.sr-only(for='inputEmail') Email address
+          label(for='inputEmail') Email address
           input#inputEmail.form-control.mb-3(name='email', type='email', placeholder='Email address', required='', autofocus='')
-          label.sr-only(for='inputPassword') Password
+          label(for='inputPassword') Password
           input#inputPassword.form-control.mb-3(name='password', type='password', placeholder='Password', required='')
           p#errorMessage= error
           button.btn.btn-primary(type='submit') Login
