changes to cave

--- a/styles/css/cave.css
+++ b/styles/css/cave.css
@@ -47,6 +47,11 @@ max-height:200px;
 
 .displayRec #mtnName {
 font-size:40px;
+margin-left: 40px;
+}
+
+.displayRec #mtnLocation {
+margin-left: 40px;
 }
 
 #map {
