--- a/views/cave.pug
+++ b/views/cave.pug
@@ -127,7 +127,7 @@ block content
             span#mtnJourneyTime
             span#mtnCoordinates(style='display: none;') 39.642733, -105.872157
           #breckenridgeResort.displayRec
-            img(src='https://artbymike.files.wordpress.com/2010/09/abasin-logo-under-construction.jpg', alt='Keystone Resort')
+            img(src='https://everythingsummit.com/sites/default/files/styles/medium/public/business/968/logo/breck_logo_9-14.jpg?itok=aaXdM_MC')
             span#mtnName Breckenridge Resort
             span#mtnLocation Breckenridge, CO
             span#mtnTemperature
